# friendshipismonadic

./: LICENSE  README.md  friendshipismonadic.cabal  helloworld.fim  stack.yaml
docs/: about.md  index.md
examples/: cidersong.fpp  fibonacci.fpp  fizzbuzz.fpp  hellovariables.fpp
executables/: Main.hs
src/: Fim.hs
src/Fim/: Parser.hs  Types.hs
src/Fim/Parser/: Literal  Literal.hs  Methods.hs  Statement.hs  Tokens.hs  Value.hs
src/Language/: Fim.hs
src/Language/Fim/: Eval.hs  Internal.hs  Lexer.hs  Parser.hs  Types.hs  Util.hs
src/Language/Fim/Eval/: Errors.hs  Statement.hs  Types.hs  Util.hs  Value.hs
src/Language/Fim/Lexer/: Reserved.hs  Token.hs
src/Language/Fim/Lexer/Reserved/: List.hs  Macro.hs
src/Language/Fim/Parser/: Class.hs  ERRATA.md  Expression.hs  Literal.hs  Methods.hs  Statement.hs  Tokens.hs  Util.hs  Value.hs
src/Language/Fim/Types/: Print.hs
test/: Spec.hs  Test.hs  TestHedgehog.hs  TestQC.hs
test/Language/Fim/Parser/: Gen.hs
