name:                friendshipismonadic
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/stillinbeta/friendshipismonadic#readme
license:             BSD3
license-file:        LICENSE
author:              Liz Frost
maintainer:          web@stillinbeta.com
copyright:           BSD3
category:            Demo
build-type:          Simpl
cabal-version:       >=1.10
extra-source-files:  README.md

executable friendshipismonadic
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       parsec == 3.1.*,
                       text == 1.2.*,
                       transformers == 0.5.*

test-suite fim-test
           type: exitcode-stdio-1.0
           main-is: Test.hs
           other-modules: Fim
                          Fim.Types
                          Fim.Parser
           hs-source-dirs:      test
                                src
           build-depends:       base >= 4.7 && < 5,
                                hspec == 2.*,
                                neat-interpolation == 0.3.*,
                                parsec == 3.1.*,
                                text == 1.2.*,
                                transformers == 0.5.*
