name:                friendshipismonadic
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/stillinbeta/friendshipismonadic#readme
license:             BSD3
license-file:        LICENSE
author:              Liz Frost
maintainer:          web@stillinbeta.com
copyright:           BSD3
category:            Demo
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md



library
        default-language:    Haskell2010
        hs-source-dirs:      src
        exposed-modules:     Language.Fim
                             Language.Fim.Types
                             Language.Fim.Types.Print
                             Language.Fim.Parser
                             -- TODO: move the reserved words list to a constants file
                             Language.Fim.Parser.Tokens
                             Language.Fim.Eval
        other-modules:       Language.Fim.Parser.Class
                             Language.Fim.Parser.Statement
                             Language.Fim.Parser.Methods
                             Language.Fim.Parser.Literal
                             Language.Fim.Parser.Value
        build-depends:       base >= 4.7 && < 5,
                             parsec == 3.1.*,
                             text == 1.2.*,
                             transformers == 0.5.*,
                             mtl == 2.2.*,
                             containers == 0.5.*

executable fim
   default-language:    Haskell2010
   hs-source-dirs:      executables
   main-is:             Main.hs
   build-depends:       base >= 4.7 && < 5,
                        text == 1.2.*,
                        friendshipismonadic


-- executable fim
--   main-is:             Main.hs
--   default-language:    Haskell2010
--                        transformers == 0.5.*

test-suite fim-hspec
           type: exitcode-stdio-1.0
           default-language:    Haskell2010
           main-is:             Test.hs
           hs-source-dirs:      test
           build-depends:       base >= 4.7 && < 5,
                                friendshipismonadic,
                                hspec == 2.*,
                                neat-interpolation == 0.3.*,
                                text == 1.2.*,
                                silently == 1.2.5

test-suite fim-qc
           type: exitcode-stdio-1.0
           default-language:    Haskell2010
           main-is:             TestQC.hs
           hs-source-dirs:      test
           build-depends:       base >= 4.7 && < 5,
                                friendshipismonadic,
                                hedgehog == 0.5,
                                neat-interpolation == 0.3.*,
                                text == 1.2.*
